modules/universal/envoy/provision/envoy-tls.yaml
admin:
  access_log_path: /etc/envoy/admin_access.log
  profile_path: /etc/envoy/envoy.prof
  address:
    socket_address: { address: 0.0.0.0, port_value: 9001 }

static_resources:
  listeners:
    - name:                        frontend_listener
      address:
        socket_address:
          address:                 0.0.0.0
          port_value:              50051
      filter_chains:
        - filters:
          - name:                  envoy.http_connection_manager
            config:
              access_log:
                - name:            envoy.file_access_log
                  config:
                    path:          "/dev/stdout"
              http_filters:
                - name:            envoy.grpc_web
                - name:            envoy.cors
                - name:            envoy.router
              codec_type:          auto
              stat_prefix:         ingress_http
              route_config:
                name:              scalar_route
                virtual_hosts:
                  - name:          scalar_service
                    domains:
                    - "*"
                    routes:
                    - match:
                          prefix:  "/"
                          grpc: {}
                      route:
                          cluster: scalar-service
                    - match:
                          prefix:  "/"
                          headers:
                            - name: "X-User-Agent"
                              prefix_match: "grpc-web-javascript"
                      route:
                          cluster: scalar-service
                    cors:
                      allow_origin: ["*"]
                      allow_methods: GET, PUT, DELETE, POST, OPTIONS
                      allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                      max_age: "1728000"
                      expose_headers: grpc-status,grpc-message,rpc.status-bin
          tls_context:
            common_tls_context:
              alpn_protocols:      "h2"
              tls_certificates:
                - certificate_chain:
                    filename:      "/etc/envoy/cert.pem"
                  private_key:
                    filename:      "/etc/envoy/key.pem"
  clusters:
    - name:                        scalar-service
      connect_timeout:             0.25s
      type:                        strict_dns
      http2_protocol_options:      {}
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time:          300
      lb_policy:                   round_robin
      health_checks:
        - timeout:                 1s
          interval:                5s
          interval_jitter:         1s
          unhealthy_threshold:     3
          healthy_threshold:       3
          grpc_health_check:       {}
      drain_connections_on_host_removal: true
      load_assignment:
        cluster_name:              scalar-service
        endpoints:
        - lb_endpoints:
          - endpoint:
             address:
              socket_address:
                address:           scalardl.internal.scalar-labs.com
                port_value:        50051
